# pytest-fixture-classes

./: LICENSE  Makefile  README.md  pyproject.toml
any_python_template/: __init__.py
pytest_fixture_classes/: __init__.py  fixture_class.py
tests/: conftest.py  test_different_file.py  test_fixture_class.py
