[tool.poetry]
name = "pytest-fixture-classes"
version = "1.0.3"
description = "Fixtures as classes that work well with dependency injection, autocompletetion, type checkers, and language servers"
authors = ["Stanislav Zmiev <zmievsa@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["pytest", "py.test", "type hints", "annotations", "fixtures", "factory fixtures"]
documentation = "https://github.com/Ovsyanka83/pytest-fixture-classes"
repository = "https://github.com/Ovsyanka83/pytest-fixture-classes"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Utilities",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = ">=3.7"
pytest = "*"
typing-extensions = ">=4.4.0"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pyupgrade = "^2.37.3"
black = "^22.8.0"
autoflake = "^1.5.3"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
